update to resvg pypi package

--- a/requirements.txt
+++ b/requirements.txt
@@ -5,5 +5,4 @@ isort
 black
 fastapi
 uvicorn
-
-https://github.com/ker0olos/resvg-python/raw/main/target/wheels/resvg_python-0.1.0-cp312-cp312-linux_x86_64.whl
+resvg_python
