--- a/.github/workflows/py.yml
+++ b/.github/workflows/py.yml
@@ -20,4 +20,4 @@ jobs:
           pip install -e .
           pip install -r requirements.txt
       - run: sh download_ml_models.sh
-      - run: python -m pytest tests/test_apply.py --isort --black
+      - run: python -m pytest --isort --black
