test on all 3 major platforms

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,7 +10,8 @@
   },
   "isort.args": [
     "--profile",
-    "black"
+    "black",
+    "--length-sort"
   ],
   "python.analysis.autoImportCompletions": true,
   "files.exclude": {
