--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,6 +14,7 @@
     "--length-sort"
   ],
   "python.analysis.autoImportCompletions": true,
+  //
   "files.exclude": {
     "**/.git": true,
     "**/.venv": true,
@@ -27,8 +28,9 @@
   "explorer.fileNesting.expand": false,
   "explorer.fileNesting.patterns": {
     "README.md": "LICENSE,.gitignore",
-    "requirements.txt": "setup.py",
+    "requirements.txt": "setup.py,pyproject.toml",
   },
+  //
   "discord.enabled": true,
   "discord.buttonEnabled": true,
   "discord.buttonLabel": "Try Rein",
